# audiovisual-object-recognition

./: LICENSE  README.md  extractbag.launch
audio_descriptor/: CMakeLists.txt  package.xml
audio_descriptor/scripts/: audio_noise.py  audio_utils.py  mfcc.py  sigproc.py  wavelet.py
av_fusion/: CMakeLists.txt  package.xml
av_fusion/launch/: bof.launch  feature_saver.launch  plot_feature_selection.launch  plot_noise.launch  v_bof.launch
av_fusion/msg/: service_msg.msg
av_fusion/scripts/: bof.py  feature_importance.py  feature_saver.py  feature_test.py  globals.py  meta_classification.py  meta_classification_roc.py  meta_generalization_roc.py  plot.py  plot_feature_selection.py  plot_generalization.py  plot_generalization_roc.py  plot_noise.py  plot_roc.py  single_modality_classification.py  single_modality_classification_roc.py  single_modality_generalization_roc.py
av_fusion/srv/: service.srv
av_utils/: CMakeLists.txt  package.xml
av_utils/scripts/: image_bag_extractor.py
av_utils/src/: imageSampleSaver.cpp  keypointDetectionVerification.cpp
bash_scripts/: audio_dataset.sh  checker.sh  extract_bags.sh  visual_dataset_creator.sh
revolving_basis/: CMakeLists.txt  package.xml
revolving_basis/config/: servo.yaml
revolving_basis/launch/: revolve.launch
revolving_basis/srv/: service.srv
revolving_basis/urdf/: dynamixel.urdf
ros_dynamixel_arm_controller/: .directory  CMakeLists.txt  package.xml
ros_dynamixel_arm_controller/config/: hand_mapping_cfg.yaml  hand_positions_cfg.yaml
ros_dynamixel_arm_controller/launch/: arm_simulation.launch  arm_simulation_replication.launch
ros_dynamixel_arm_controller/msg/: service_msg.msg
ros_dynamixel_arm_controller/scripts/: hand_publisher.py  inverse_kinematics_service.py
