<?xml version="1.0"?>
<package>
  <name>audiovisual_fusion</name>
  <version>1.0.0</version>
  <description>Audivisual fusion module for object recognition</description>

  <maintainer email="samuelservulo@dcc.ufmg.br">Samuel Servulo</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/sservulo/audiovisual-object-recognition</url>

  <author email="samuelservulo@dcc.ufmg.br">Samuel Servulo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>